<resources>
<string name="lifecycle_all">所有</string>
<string name="lifecycle_visible">可见</string>
<string name="lifecycle_frontdeskoperation">前台运行</string>
<string name="address_consignee">收货人姓名（必填）</string>
<string name="address_tel">电话号码（必填）</string>
<string name="address_email">Email(必填)</string>
<string name="address_phone">手机号码（必填）</string>
<string name="address_zip">邮政编码</string>
<string name="address_area">所在地区</string>
<string name="address_address">详细地址（必填）</string>
<string name="address_add">添加地址</string>
<string name="select_address">选择地址</string>
<string name="addressb_country">选择国家</string>
<string name="manage_address">收货地址管理</string>
<string name="add_new_address">新增收货地址</string>
<string name="manage2_over">完成</string>
<string name="manage2_name">收货人姓名</string>
<string name="manage2_tel">电话号码</string>
<string name="manage2_email">Email</string>
<string name="manage2_phone">手机号码</string>
<string name="manage2_address">详细地址</string>
<string name="manage2_set">设为默认</string>
<string name="manage2_delete">删除地址</string>
<string name="modify_address">修改收货地址</string>
<string name="balance_receiver">收件人</string>
<string name="balance_address">收件地址</string>
<string name="balance_pay">支付方式</string>
<string name="balance_shipping">配送方式</string>
<string name="balance_bill">发票信息</string>
<string name="balance_list">商品清单</string>
<string name="balance_redpocket">红包</string>
<string name="balance_exp">积分</string>
<string name="balance_detail">订单明细</string>
<string name="balance_transportation">运输费</string>
<string name="balance_rental">总额：</string>
<string name="balance_submit">提交订单</string>
<string name="balance_cancel">取消订单</string>
<string name="bill_save">保存</string>
<string name="bill_office">办公用品</string>
<string name="bill_food">食品</string>
<string name="bill_commodity">日用品</string>
<string name="bill_title">发票抬头</string>
<string name="collect_myfavorite">我的收藏</string>
<string name="collect_done">完成</string>
<string name="collect_compile">编辑</string>
<string name="debughome_log">协议log</string>
<string name="debughome_activity">activity周期</string>
<string name="debughome_crashlog">crash log</string>
<string name="debughome_floatingwindow">浮窗设置</string>
<string name="dialog_title">title</string>
<string name="dialog_message">message</string>
<string name="dialog_ensure">确定</string>
<string name="dialog_cancel">取消</string>
<string name="express_logistics">物流信息</string>
<string name="floatView_floatingwindowopen">开启悬浮窗</string>
<string name="floatView_floatingwindowclose">关闭悬浮窗</string>
<string name="floatView_3g">模拟3G网络</string>
<string name="floatView_cancel3g">取消模拟3G网络</string>
<string name="floatView_2g">模拟2G网络</string>
<string name="floatView_cancel2g">取消模拟2G网络</string>
<string name="gooddetail_parameter">基本参数</string>
<string name="gooddetail_product">商品详情</string>
<string name="gooddetail_desc">商品描述</string>
<string name="gooddetail_commit">最新评论：</string>
<string name="gooddetail_buy">立即购买</string>
<string name="gooddetail_shoppingcart">加入购物车</string>
<string name="hotselling_recommend">特价</string>
<string name="score_creditsexchange">积分兑换</string>
<string name="score_submit">提交</string>
<string name="login_account">账户</string>
<string name="login_login">登录</string>
<string name="login_username">用户名</string>
<string name="login_password">密码</string>
<string name="login_register">注册</string>
<string name="profile_personal">个人中心</string>
<string name="profile_seller">卖家版</string>
<string name="profile_obligation">待付款</string>
<string name="profile_readyforshipment">待发货</string>
<string name="profile_forthegoods">待收货</string>
<string name="profile_history">历史订单</string>
<string name="profile_message">商城通知</string>
<string name="redpaper_input">选择红包</string>
<string name="register_regist">注册</string>
<string name="register_email">邮箱</string>
<string name="recommend">推荐人</string>
<string name="register_confirm">确认密码</string>
<string name="search_input">请输入搜索关键字</string>
<string name="setting_picture">图片显示</string>
<string name="setting_smartmode">智能模式</string>
<string name="setting_hqpicture">高质量（适合WiFi环境）</string>
<string name="setting_normal">低质量（适合2G或3G环境）</string>
<string name="setting_official">官方信息</string>
<string name="setting_service">官方客服</string>
<string name="setting_website">官方网站</string>
<string name="setting_tech">版权声明</string>
<string name="setting_personal">个人隐私协议</string>
<string name="setting_private">隐私协议</string>
<string name="setting_rate">应用评分</string>
<string name="setting_geekzoo">关于Geek Zoo</string>
<string name="setting_about">关于应用</string>
<string name="setting_logout">注销</string>
<string name="share_share">分享</string>
<string name="share_sina">分享到新浪微博</string>
<string name="share_tencent">分享到腾讯微博</string>
<string name="shopcar_shopcar">购物车</string>
<string name="shopcar_nothing">购物车还没有商品</string>
<string name="shopcar_add">赶紧去逛逛吧！加一些商品~</string>
<string name="shopcarfooter_total">总计：</string>
<string name="shopcarfooter_settleaccounts">结算</string>
<string name="shopcarhead_ecm">ECMobile</string>
<string name="shopcaritem_done">完成</string>
<string name="shopcaritem_modification">修改</string>
<string name="shopcaritem_remove">移除商品</string>
<string name="topview_message">通知</string>
<string name="tradeitem_number">订单编号</string>
<string name="tradeitem_time">成交时间</string>
<string name="tradeitem_rental">总额</string>
<string name="tradeitem_logistics">查看物流</string>
<string name="tradeitem_receive">确认收货</string>
<string name="voiceview_text">说出您要搜索的内容...</string>
<string name="memorymessagemctivity_motalram">总内存</string>
<string name="memorymessageactivity_freeram">空闲内存</string>
<string name="memorymessageactivity_lowram">是否处于低内存状态</string>
<string name="memorymessageactivity_rate">传输速率</string>
<string name="memorymessageactivity_id">进程ID</string>
<string name="memorymessageactivity_uid">进程所在的UID</string>
<string name="memorymessageactivity_mem">进程占用内存</string>
<string name="memorymessageactivity_process">进程名</string>
<string name="life_cycle">activity生存周期</string>
<string name="exit_again">再按一次退出</string>
<string name="exit_debug_mode">确认退出debug模式？</string>
<string name="add_name">请填写姓名</string>
<string name="add_tel">请填写电话号码</string>
<string name="add_email">请填写邮箱地址</string>
<string name="add_correct_email">请填写正确的邮箱地址</string>
<string name="add_address">请填写详细地址</string>
<string name="confirm_address">请确认地址信息是否完整</string>
<string name="select_province">选择省</string>
<string name="select_city">选择市</string>
<string name="select_area">选择地区</string>
<string name="country">国家</string>
<string name="province">省</string>
<string name="city">市</string>
<string name="area">地区</string>
<string name="can_not_delete">不可以删除默认地址</string>
<string name="successful_operation">操作成功</string>
<string name="non_address">您还没有添加收货地址</string>
<string name="not_support_a_red_envelope">该订单不支持红包</string>
<string name="browser">浏览器</string>
<string name="no_favorite">您还没有添加收藏哦，赶快添加吧</string>
<string name="no_commit">该商品暂无评论</string>
<string name="deliverStatus">物流状态</string>
<string name="order_number">订单号：</string>
<string name="hold_on">请稍候…</string>
<string name="not_support">暂不支持</string>
<string name="check_the_network">请检查网络</string>
<string name="no_login">您还没有登录，请先登录</string>
<string name="formerprice">促销价格：</string>
<string name="market_price">市场价格：</string>
<string name="exemption_from_postage">运费：包邮</string>
<string name="not_pack_mail">运费：不包邮</string>
<string name="brstock">库存：</string>
<string name="store_price">商店价格：</string>
<string name="enter_score">请输入正确积分</string>
<string name="score_not_zero">输入积分不能为0</string>
<string name="all_of_you">您总共有</string>
<string name="can_use">可使用</string>
<string name="score">个积分</string>
<string name="user_name_cannot_be_empty">用户名不能为空</string>
<string name="password_cannot_be_empty">密码不能为空</string>
<string name="pay">付款</string>
<string name="total">总额</string>
<string name="checkout">结算</string>
<string name="modify">修改</string>
<string name="redpaper">请选择红包</string>
<string name="not_null">（必填*）</string>
<string name="email_cannot_be_empty">邮箱不能为空</string>
<string name="required_cannot_be_empty">必填项不能为空</string>
<string name="fault">邮箱格式错误，请验证</string>
<string name="password_not_match">密码不一致，请重新输入</string>
<string name="setting">设置</string>
<string name="call_or_not">是否拨打</string>
<string name="exit">退出</string>
<string name="ensure_exit">确定退出该账户？</string>
<string name="no_mode_of_distribution">暂时没有配送方式</string>
<string name="pay_or_not">订单已生成成功，是否马上支付？</string>
<string name="personal_center">您可以去个人中心查看订单哦</string>
<string name="understock">库存不足</string>
<string name="total_price">总价</string>
<string name="await_pay">待付款订单</string>
<string name="await_ship">待发货订单</string>
<string name="shipped">待收货订单</string>
<string name="no_data">暂无数据</string>
<string name="check_or_not">是否马上去历史订单查看？</string>
<string name="use">兑换</string>
<string name="share_blog">我在Emall上看到一件商品，感觉不错</string>
<string name="number">数目：</string>
<string name="crash_log_analysis">崩溃日志分析</string>
<string name="welcome">欢迎使用</string>
<string name="no_sdcard">sdcard无效或没有插入!</string>
<string name="piece">个</string>
<string name="delivery">您必须选择一个配送方式</string>
<string name="collected">您已收藏过此商品</string>
<string name="been_used">用户名或email已使用</string>
<string name="submit_the_parameter_error">提交参数错误</string>
<string name="failed">处理失败</string>
<string name="purchase_failed">购买失败</string>
<string name="no_shipping_information">订单无发货信息</string>
<string name="click_to_login">点击此处登录</string>
<string name="share_weixin">分享到微信</string>
<string name="share_weixin_timeline">分享到朋友圈</string>
<string name="button_yes">是的</string>
<string name="button_no">取消</string>
<string name="button_cancel">忽略</string>
<string name="button_forward">前往</string>
<string name="button_ok">好的</string>
<string name="error_network">网络异常，请稍后再试</string>
<string name="error_1">处理失败</string>
<string name="error_100">处理失败</string>
<string name="error_10001">您必须选择一个配送方式</string>
<string name="error_10007">您已收藏过此商品</string>
<string name="error_10008">库存不足</string>
<string name="error_11">用户名或email已使用</string>
<string name="error_101">提交参数错误</string>
<string name="error_8">处理失败</string>
<string name="error_14">购买失败</string>
<string name="error_10009">订单无发货信息</string>
<string name="b2c">B2C商品</string>
<string name="c2c">C2C商品</string>
<string name="get_pt">回答赚PT</string>
<string name="no_limit">不限</string>
<string name="gender">性别</string>
<string name="district">区域</string>
<string name="jobs">职业</string>
<string name="free_shipping">是否包邮</string>
<string name="real_goods">实物</string>
<string name="age_range">年龄段</string>
<string name="price_range">价格区间</string>
<string name="distribution_layout_add">新增配送</string>
<string name="distribution_str_type">配送方式</string>
<string name="distribution_str_msg">简介:</string>
<string name="distribution_str_firstprice">首件邮费:</string>
<string name="distribution_str_sencprice">附加邮费:</string>
<string name="distribution_str_open">启用:</string>
<string name="distribution_str_edit">编辑</string>
<string name="distribution_str_del">删除</string>
<string name="distribution_addgoods_title">发布商品</string>
<string name="distribution_addgoods_classification">商品分类</string>
<string name="distribution_addgoods_name">商品名称</string>
<string name="distribution_addgoods_brand">品牌</string>
<string name="distribution_addgoods_label">标签</string>
<string name="distribution_addgoods_inventory">库存量</string>
<string name="distribution_addgoods_price">价格</string>
<string name="distribution_addgoods_freight">运费</string>
<string name="distribution_addgoods_location">所在地</string>
<string name="distribution_addgoods_no">货号</string>
<string name="distribution_addgoods_description">商品描述</string>
<string name="distribution_addgoods_picture">选择图片</string>
<string name="distribution_addgoods_select">选择</string>
<string name="distribution_addgoods_photo">拍照</string>
<string name="distribution_addgoods_draftbox">暂存草稿箱</string>
<string name="distribution_addgoods_submit">提交</string>
</resources>