<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="5dp">
        <TextView android:id="@+id/title1" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/distribution_str_type"/>
        <TextView android:id="@+id/tranlate_type" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_alignParentRight="true" android:textColor="@color/orangered" android:text=""/>
        
        <View android:layout_width="fill_parent"  android:layout_height="1dip" android:id="@+id/sep1" 
            android:background="@color/gainsboro" android:layout_below="@+id/title1"/>
        
        <TextView android:id="@+id/title2" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/distribution_str_msg" android:layout_below="@+id/sep1"/>
        <TextView android:id="@+id/message" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_below="@+id/sep1" android:layout_toRightOf="@+id/title2"
            android:singleLine="true" android:ellipsize="end" android:text=""/>
        
        <TextView android:id="@+id/title3" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/distribution_str_firstprice" android:layout_below="@+id/title2"/>
        <TextView android:id="@+id/first_price" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_below="@+id/title2" android:layout_toRightOf="@+id/title3" android:textColor="@color/orangered"
            android:singleLine="true" android:ellipsize="end" android:text=""/>
        
        <TextView android:id="@+id/title4" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/distribution_str_sencprice" android:layout_below="@+id/title3"/>
        <TextView android:id="@+id/send_price" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_below="@+id/title3" android:layout_toRightOf="@+id/title4" android:textColor="@color/orangered"
            android:singleLine="true" android:ellipsize="end" android:text=""/>
        
        <TextView android:id="@+id/title5" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/distribution_str_open" android:layout_below="@+id/title4"/>
        <TextView android:id="@+id/open" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_below="@+id/title4" android:layout_toRightOf="@+id/title5" android:textColor="@color/orangered"
            android:singleLine="true" android:ellipsize="end" android:text=""/>
        
        <View android:layout_width="fill_parent"  android:layout_height="1dip" android:id="@+id/sep2" 
            android:background="@color/gainsboro" android:layout_below="@+id/title5"/>
        
        <TextView android:id="@+id/delete" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/distribution_str_del" android:layout_below="@+id/sep2" android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"/>
        
        <TextView android:id="@+id/edit" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_below="@+id/sep2" android:layout_toLeftOf="@+id/delete" android:layout_marginTop="5dp"
            android:text="@string/distribution_str_edit" android:layout_marginRight="10dp"/>
        
    </RelativeLayout>

</LinearLayout>
